--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
